fix overflowing prx-hero

--- a/src/app/campaign/campaign.component.css
+++ b/src/app/campaign/campaign.component.css
@@ -14,3 +14,7 @@
 .hero-actions prx-button, .hero-actions >>> button {
   float: right;
 }
+
+prx-hero >>> .affix {
+  overflow: hidden;
+}
